src/css/themes/bootstrap3/flatly/infragistics.theme.css
/* ... */
.ui-iggrid tfoot,
.ui-iggrid-footer {
  border-bottom: 1px solid #ecf0f1 !important;
}
.ui-iggrid .ui-iggrid-scrolldiv {
  background-color: #f9f9f9;
  box-shadow: inset 0 0 0 1px #ecf0f1;
  border-bottom: 1px solid #ecf0f1 !important;
  /* !important needed because layout css removes borders */
}
.ui-iggrid .ui-iggrid-scrolldiv:first-child,
.ui-iggrid > table tr:first-child td,
.ui-iggrid-responsive-vertical,
.ui-iggrid > table tr:first-child th.ui-iggrid-rowselector-class {
  border-top: 1px solid #ecf0f1 !important;
  /* border-top for tables without headers */
}
.ui-iggrid.ui-igpivotgrid > table tr:first-child td {
  border-bottom: 1px solid #ecf0f1 !important;
}
.ui-iggrid.ui-igpivotgrid > table > tbody tr:first-child th {
  border-top: none!important;
}
.ui-iggrid-layout-helper {
  border-bottom: 1px solid #ecf0f1;
}
.ui-iggrid-layout-helper > tbody > tr:first-child > td,
.ui-iggrid-layout-helper > tbody > tr:first-child > td th,
.ui-iggrid > table > thead + tbody > tr:first-child td,
.ui-iggrid > table > thead + tfoot + tbody > tr:first-child td {
  /* border-top: 0 none!important;
 border-top removed for tables with virtualization, or headers */
}
.ui-iggrid .ui-widget-header,
.ui-iggrid th,
.ui-iggrid th.ui-state-default {
  background-color: #fff;
  color: #2C3E50;
  border-color: #ecf0f1;
  border-right: 1px solid #ecf0f1;
  border-left: 0 none;
}
.ui-iggrid th .ui-iggrid-indicatorcontainer .ui-iggrid-summaries-header-icon.ui-icon {
  background: url(images/igGrid/filter-icons-333333.png) no-repeat scroll -416px 0 transparent;
}
.ui-iggrid th .ui-iggrid-indicatorcontainer .ui-iggrid-summaries-header-icon.ui-icon {
  background: url(images/igGrid/filter-icons-333333.png) no-repeat scroll -416px 0 transparent;
}
.ui-iggrid th:first-child {
  border-left: 1px solid #ecf0f1;
}
.ui-iggrid > table > tbody tr:first-child th.ui-igpivotgrid-header {
  border-top-color: #ecf0f1 !important;
}
.ui-iggrid th a,
.ui-iggrid th.ui-state-default a,
.ui-iggrid th.ui-state-hover a,
.ui-iggrid th.ui-state-active a {
  color: #2C3E50;
}
.ui-iggrid th.ui-state-hover {
  background: #ecf0f1;
}
.ui-iggrid th.ui-state-active,
.ui-iggrid th.ui-state-focus,
.ui-iggrid-sortableheader:focus {
  background: #ecf0f1;
}
.ui-iggrid .ui-iggrid-footer,
.ui-iggrid .ui-iggrid-toolbar {
  display: block;
}
.ui-iggrid .ui-iggrid-footer,
.ui-iggrid .ui-iggrid-toolbar,
.ui-iggrid .ui-iggrid-addrow td,
.ui-iggrid .ui-iggrid-addrow th {
  background-color: #ecf0f1;
  font-weight: normal;
  text-align: left;
  color: #2C3E50;
  border: none;
}
.ui-iggrid .ui-iggrid-footer .ui-state-default,
.ui-iggrid .ui-iggrid-toolbar .ui-state-default,
.ui-iggrid .ui-iggrid-footer .ui-state-hover {
  background-color: #ecf0f1;
  color: #2C3E50;
  text-decoration: none;
}
.ui-iggrid .ui-iggrid-footer .ui-state-default a,
.ui-iggrid .ui-iggrid-toolbar .ui-state-default a,
.ui-iggrid .ui-iggrid-addrow td a,
.ui-iggrid .ui-iggrid-footer .ui-state-default a {
  color: #fff;
  text-decoration: none;
}
.ui-iggrid tbody .ui-icon,
.ui-iggrid .ui-iggrid-addrow td .ui-icon {
  color: #888888;
}
.ui-iggrid .ui-igedit-button .ui-icon,
.ui-igpivot-metadataitem .ui-icon-close {
  color: #888888;
}
.ui-igpivot-metadataitem {
  outline: red !important;
}
.ui-iggrid th .ui-icon,
.ui-iggrid th.ui-state-active.ui-state-hover .ui-icon {
  color: #888888;
}
.ui-iggrid th.ui-state-hover .ui-icon,
.ui-iggrid th.ui-state-active.ui-state-hover .ui-icon {
  color: #222222;
}
/* BUG 246065 Marin Popov 23.12.2017 Grid's header and body are misaligned when a grid is Multi Row Layout and is continuous virtualization mode.*/
.ui-iggrid tbody td {
  border-left: 1px solid transparent;
  border-right: 1px solid transparent;
}
.ui-iggrid tbody td.ui-state-hover {
  border-color: transparent;
}
.ui-iggrid-headertable-mrl.ui-iggrid-headertable-mrl-scrollable,
.ui-iggrid .ui-iggrid-table-mrl tbody td {
  border-right: 1px solid #ecf0f1;
}
/* BUG 246065 END */
.ui-iggrid tbody td,
.ui-iggrid thead .ui-iggrid-editingcell,
.ui-iggrid tbody th.ui-iggrid-rowselector-class,
.ui-iggrid tfoot td {
  border-top: 1px solid transparent;
  border-bottom: 1px solid #ecf0f1;
}
/*sorting*/
.ui-iggrid td.ui-state-highlight {
  background: none;
  background-color: #ecf0f1;
  color: #2C3E50;
  font-weight: normal;
  border: 0 none;
}
/* hover */
.ui-iggrid td.ui-state-hover,
.ui-iggrid .ui-ig-altrecord td.ui-state-hover,
.ui-iggrid .ui-ig-altrecord td.ui-state-default.ui-state-hover,
.ui-iggrid th.ui-iggrid-rowselector-class.ui-state-hover,
.ui-iggrid .ui-ig-altrecord th.ui-iggrid-rowselector-class.ui-state-hover,
.ui-iggrid .ui-ig-altrecord th.ui-iggrid-rowselector-class.ui-state-default.ui-state-hover,
.ui-iggrid-responsive-vertical tr > td.ui-state-hover:first-child,
.ui-iggrid-responsive-vertical tr.ui-ig-altrecord > td.ui-state-hover:first-child {
  color: #2C3E50;
  background: #ecf0f1;
  border-top: 1px solid transparent;
  border-bottom: 1px solid #ecf0f1;
}
.ui-iggrid td.ui-state-hover a,
.ui-iggrid .ui-ig-altrecord td.ui-state-hover a {
  color: #18BC9C;
  text-shadow: none;
}
.ui-iggrid td.ui-state-hover a:hover,
.ui-iggrid .ui-ig-altrecord td.ui-state-hover a:hover {
  color: #18BC9C;
}
/* active cells */
.ui-iggrid td.ui-state-focus,
.ui-iggrid th.ui-iggrid-rowselector-class.ui-state-focus {
  background-image: none;
}
.ui-ig-altrecord td.ui-state-focus,
.ui-ig-altrecord th.ui-iggrid-rowselector-class.ui-state-focus {
  background: #f9f9f9 none;
}
/* active rows */
.ui-iggrid tr.ui-state-focus {
  background: transparent none;
}
.ui-iggrid .ui-ig-altrecord.ui-state-focus {
  background: #f9f9f9 none;
}
.ui-iggrid tr.ui-state-focus td,
.ui-iggrid tr.ui-state-focus th,
.ui-iggrid tr.ui-ig-altrecord.ui-state-focus td,
.ui-iggrid tr.ui-ig-altrecord.ui-state-focus th {
  border-top: 1px solid #2C3E50 !important;
  border-bottom: 1px solid #2C3E50 !important;
}
.ui-iggrid td.ui-state-active.ui-state-focus,
.ui-iggrid td.ui-state-focus {
  border: 1px solid #2C3E50 !important;
}
/* ... */

